--- a/README.rdoc
+++ b/README.rdoc
@@ -41,7 +41,7 @@ heroku rake setup_church[churchurn,DRBC]  # won't let you have spaces and quotes
 Add user to a church:
 
 ```bash
-heroku rake add_church_user[churchurn,email]
+heroku rake add_church_user[churchurn,email] # won't let you have spaces and quotes
 ```
 
 Debugging:
